AC_PREREQ([2.53])
AC_INIT(rlm_acctlog.c)
AC_REVISION(0.1)
AC_DEFUN(modname,[rlm_acctlog])

if test x$with_[]modname != xno; then

	AC_PROG_CC
	AC_PROG_CPP

	AC_CHECK_HEADER(stdio.h,
		[ slog_cflags="$acctlog_cflags -I/usr/include" ],
		[ fail=$fail" stdio.h" ]
	)

	targetname=modname
else
	targetname=
	echo \*\*\* module modname is disabled.
fi

dnl  Don't change this section.
if test x"$fail" != x""; then
	if test x"${enable_strict_dependencies}" = x"yes"; then
		AC_MSG_ERROR([set --without-]modname[ to disable it explicitly.])
	else
		AC_MSG_WARN([silently not building ]modname[.])
		AC_MSG_WARN([FAILURE: ]modname[ requires: $fail.]);
		targetname=""
	fi
fi


AC_SUBST(acctlog_cflags)
AC_SUBST(acctlog_ldflags)


AC_SUBST(targetname)
AC_OUTPUT(Makefile)
