AC_PREREQ([2.53])
AC_INIT(rlm_attr_rewrite.c)
AC_REVISION($Revision$)
AC_DEFUN(modname,[rlm_attr_rewrite])

if test x$with_[]modname != xno; then

	AC_PROG_CC
	AC_PROG_CPP

	AC_CHECK_HEADERS(regex.h)

	if test "$ac_cv_header_regex_h" != "yes"; then
		AC_MSG_RESULT(no regex.h)
		[ fail=$fail" regex.h" ]
	fi

	targetname=modname
else
	targetname=
	echo \*\*\* module modname is disabled.
fi

dnl  Don't change this section.
if test x"$fail" != x""; then
	if test x"${enable_strict_dependencies}" = x"yes"; then
		AC_MSG_ERROR([set --without-]modname[ to disable it explicitly.])
	else
		AC_MSG_WARN([silently not building ]modname[.])
		AC_MSG_WARN([FAILURE: ]modname[ requires: $fail.]);
		targetname=""
	fi
fi


AC_SUBST(mod_cflags)
AC_SUBST(mod_ldflags)

AC_SUBST(targetname)
AC_OUTPUT(all.mk)
