AC_INIT(rlm_checkval.c)
AC_REVISION($Revision$)
AC_DEFUN(modname,[rlm_checkval])

if test x$with_[]modname != xno; then

	dnl  This module doesn't need any autoconf test which is not already
	dnl  in top-level configure.

	targetname=modname
else
	targetname=
	echo \*\*\* module modname is disabled.
fi

AC_SUBST(targetname)
AC_OUTPUT(Makefile)
