AC_INIT(rlm_counter.c)
AC_REVISION($Revision$)
AC_DEFUN(modname,[rlm_counter])

if test x$with_[]modname != xno; then

	AC_CHECK_LIB(gdbm, gdbm_open,
		[ counter_ldflags="-lgdbm" ],
		[ fail=$fail" libgdbm" ],
	)

	targetname=modname
else
	targetname=
	echo \*\*\* module modname is disabled.
fi

if test x"$fail" != x""; then
	if test x"${enable_strict_dependencies}" = x"yes"; then
		AC_MSG_ERROR([set --without-]modname[ to disable it explicitly.])
	else
		AC_MSG_WARN([silently not building ]modname[.])
		AC_MSG_WARN([FAILURE: ]modname[ requires: $fail.]); 
		targetname=""
	fi
fi

AC_SUBST(counter_ldflags)
AC_SUBST(counter_cflags)
AC_SUBST(targetname)
AC_OUTPUT(Makefile)
