AC_INIT(rlm_example.c)  # change 'example'
AC_REVISION($Revision$)
AC_DEFUN(modname,[rlm_example])  # change 'example'

if test x$with_[]modname != xno; then


	dnl put configuration checks here.  
	dnl use AC_MSG_ERROR() on fatal errors.
	dnl use AC_MSG_WARN() on important messages.

	AC_CHECK_LIB(c, printf,
		[ example_ldflags="$example_ldflags -lc" ],
		[ fail=$fail" printf" ]
	)

	AC_CHECK_HEADER(stdio.h,
		[ example_cflags="$example_cflags -I/usr/include" ],
		[ fail=$fail" stdio.h" ]
	)


	targetname=modname     # keep this!  Don't change!
else
	targetname=            # keep this!  Don't change!
	echo \*\*\* module modname is disabled.  # keep this!  Don't change!
fi

dnl  Don't change this.
if test x"$fail" != x""; then
	if test x"${enable_strict_dependancies}" = x"yes"; then
		AC_MSG_ERROR([set --without-]modname[ to disable it explicitly.])
	else
		AC_MSG_WARN([silently not building ]modname[.])
		AC_MSG_WARN([FAILURE: ]modname[ requires: $fail.]); 
		targetname=""
	fi
fi


AC_SUBST(example_cflags)  # change 'example'
AC_SUBST(example_ldflags)  # change 'example'


AC_SUBST(targetname)  # keep this!  Don't change!
AC_OUTPUT(Makefile)  # keep this!  Don't change!
